--- a/replate/src/App.css
+++ b/replate/src/App.css
@@ -1,5 +1,13 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  width: 1300px;
+  height: 620px;
+  padding: 20px 0 0 0;
+  margin: 20px 25px;
+  border: 1px solid black;
+  background: url(https://cdn.pixabay.com/photo/2018/06/30/09/31/background-image-3507320_960_720.jpg);
 }
 
 .App-logo {
@@ -31,3 +39,4 @@
     transform: rotate(360deg);
   }
 }
+
