trying to render on screen

--- a/replate/src/App.css
+++ b/replate/src/App.css
@@ -7,7 +7,7 @@
   padding: 20px 0 0 0;
   margin: 20px 25px;
   border: 1px solid black;
-  background: url(https://cdn.pixabay.com/photo/2018/06/30/09/31/background-image-3507320_960_720.jpg);
+  /* background: url(https://cdn.pixabay.com/photo/2018/06/30/09/31/background-image-3507320_960_720.jpg); */
 }
 
 .App-logo {
