--- a/replate/src/App.css
+++ b/replate/src/App.css
@@ -2,12 +2,11 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  width: 1300px;
-  height: 620px;
+  height: 640px;
   padding: 20px 0 0 0;
-  margin: 20px 25px;
   border: 1px solid black;
-  background: url(https://cdn.pixabay.com/photo/2018/06/30/09/31/background-image-3507320_960_720.jpg);
+  background: url(https://picserio.com/data/out/260/nature-backgrounds_4722766.jpeg) no-repeat center center fixed;
+  background-size: cover;
 }
 
 .App-logo {
